# swagger-codegen

./: .gitattributes  .gitignore  .gitmodules  .java-version  .travis.yml  .travis.yml.bash  .travis.yml.ios  .whitesource  CONTRIBUTING.md  DataCollectorGenerate.sh  Dockerfile  JsapiGenerate.sh  Osome.md  README.md  TestResult.xml  Vagrantfile  appveyor.yaml  appveyor.yml  build-codegen-cli.sh  build.sbt  circle.yml  circle.yml.disabled  config.json  config_php.json  coupon-gateway.json  cpuid.ps1  detect_carriage_return.sh  docker-entrypoint.sh  generateEasyDocsApi.cmd  generateEasyDocsApi.sh  generateEasyDocsApiNoUpload.sh  generate_tizen.sh  google_checkstyle.xml  grantall.policy  gulpfile.js  javascript.config.json  new.sh  nodejs_sdk_gen  orchestrator.json  package.json  (+32 more)
.github/: PULL_REQUEST_TEMPLATE.md  (+1 more)
samples/client/petstore/rust/: Cargo.toml  README.md
samples/client/petstore/rust/docs/: Amount.md  ApiResponse.md  Category.md  Currency.md  Order.md  Pet.md  PetApi.md  StoreApi.md  Tag.md  User.md  UserApi.md
samples/client/petstore/rust/examples/: client.rs
samples/client/petstore/rust/src/: lib.rs
samples/client/petstore/rust/src/apis/: api_client.rs  client.rs  configuration.rs  mod.rs  pet_api.rs  store_api.rs  user_api.rs
samples/client/petstore/rust/tests/: deserialize_json.rs
samples/client/petstore/rust2/: Cargo.toml  README.md
samples/client/petstore/rust2/api/: swagger.yaml
samples/client/petstore/rust2/examples/: client.rs  server.rs
samples/client/petstore/rust2/src/: client.rs  lib.rs  mimetypes.rs  models.rs  server.rs
(+13571 files in other folders)
