[package]
name = "petstore_client"
version = "1.0.0"
authors = ["Swagger Codegen team and contributors"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.7"
serde_json = "1.0"
base64 = "~0.7.0"
futures = "0.1.21"
hyper = "0.12.34"
hyper-old-types = "0.11"
url = "1.5"

[dev-dependencies]
tokio-core = "*"
